package nl.triptop.betaalmethode.demo;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class BetaalmethodeDemoApplication {

	public static void main(String[] args) {
		SpringApplication.run(BetaalmethodeDemoApplication.class, args);
	}

}
